--- a/The Battle of Neighborhoods.ipynb
+++ b/The Battle of Neighborhoods.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "1. A description of the problem and a discussion of the background.\n",
     "- problem: what is the best place for kids restaurant\n",
-    "- background: I want to open a new restaurant for kids in gangnam district in seoul, south korea. \n",
-    "            so I will find the place where many kids are playing . \n",
-    "            I will find the place where schools are crowed in gangnam district.  "
+    "- background: \n",
+    "I want to open a new restaurant for kids in gangnam district in seoul, south korea. so I will find the place where many kids are playing . I will find the place where schools are crowed in gangnam district.  "
    ]
   },
   {
@@ -17,7 +16,8 @@
    "source": [
     "2. A description of the data and how it will be used to solve the problem.\n",
     "- data: latitude and longitude data of schools in gangnam district in seoul, south korea.\n",
-    "- how: (1) make ten condidate points (randomly chosen) in gangnam distruct.\n",
+    "- how: \n",
+    "       (1) make ten condidate points (randomly chosen) in gangnam distruct.\n",
     "       (2) make 1 kilometer radius circle for each candidate point.\n",
     "       (3) calcuate how many schools are in each circle.\n",
     "       (4) find the circle which contains maximum schools. the center of that circle will be the best place for the restaurant."
