--- a/The Battle of Neighborhoods.ipynb
+++ b/The Battle of Neighborhoods.ipynb
@@ -7,7 +7,7 @@
     "1. A description of the problem and a discussion of the background.\n",
     "- problem: what is the best place for kids restaurant\n",
     "- background: \n",
-    "I want to open a new restaurant for kids in gangnam district in seoul, south korea. so I will find the place where many kids are playing . I will find the place where schools are crowed in gangnam district.  "
+    "I want to open a \"new restaurant for kids in gangnam district in seoul, south korea\". so I will find the place where many kids are playing . I will find the place where schools are crowed in gangnam district.  "
    ]
   },
   {
