--- a/The Battle of Neighborhoods.ipynb
+++ b/The Battle of Neighborhoods.ipynb
@@ -4,18 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. A description of the problem and a discussion of the background.\n",
-    " Problem: what is the best place for kids restaurant\n",
-    " Background: \n",
-    "I want to open a \"new restaurant for kids in gangnam district in seoul, south korea\". so I will find the place where many kids are playing . I will find the place where schools are crowed in gangnam district.  "
+    "1. A description of the problem and a discussion of the background."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. A description of the data and how it will be used to solve the problem.\n",
-    "Data: latitude and longitude data of schools in gangnam district in seoul, south korea.\n",
+    "Problem: what is the best place for kids restaurant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Background:  \n",
+    "I want to open a \"new restaurant for kids in gangnam district in seoul, south korea\". so I will find the place where many kids are playing . I will find the place where schools are crowed in gangnam district."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. A description of the data and how it will be used to solve the problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data: latitude and longitude data of schools in gangnam district in seoul, south korea. I will use four square's location data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "How: \n",
     "       (1) make ten condidate points (randomly chosen) in gangnam distruct.\n",
     "       (2) make 1 kilometer radius circle for each candidate point.\n",
