--- a/The Battle of Neighborhoods.ipynb
+++ b/The Battle of Neighborhoods.ipynb
@@ -4,20 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.A description of the problem and a discussion of the background."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Problem: what is the best place for kids restaurant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Background:  \n",
     "I want to open a \"new restaurant for kids in gangnam district in seoul, south korea\". so I will find the place where many kids are playing . I will find the place where schools are crowed in gangnam district."
    ]
@@ -51,8 +37,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#week5\n",
-    "1. A full report consisting of all of the following components \n",
+    "# week5\n",
+    "# A full report consisting of all of the following components \n",
+    "\n",
     "(0) purpose: what is the best places for kid restraurant in kangnam district in seoul, in korea.\n",
     "(1)Introduction\n",
     " -I am living in kangnam district in seoul, korea. one of my neightbor was interested in kid restaurant business. so i prepared this project for him.    \n",
@@ -78,13 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "'conda'은(는) 내부 또는 외부 명령, 실행할 수 있는 프로그램, 또는\n",
+      "배치 파일이 아닙니다.\n",
       "'conda'은(는) 내부 또는 외부 명령, 실행할 수 있는 프로그램, 또는\n",
       "배치 파일이 아닙니다.\n"
      ]
@@ -95,14 +84,6 @@
      "text": [
       "Folium installed\n",
       "Libraries imported.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'conda'은(는) 내부 또는 외부 명령, 실행할 수 있는 프로그램, 또는\n",
-      "배치 파일이 아닙니다.\n"
      ]
     }
    ],
@@ -134,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -215,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,38 +208,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "schools=8      candidate latitude:37.5211865549168 longitude:127.02624483723909\n",
-      "schools=6      candidate latitude:37.52083070093033 longitude:127.02823360791062\n",
-      "schools=3      candidate latitude:37.52080575457454 longitude:127.03027764168766\n",
-      "schools=4      candidate latitude:37.52103194523149 longitude:127.03228783011292\n",
-      "schools=6      candidate latitude:37.52110088923871 longitude:127.03437511751463\n",
-      "schools=9      candidate latitude:37.51975250888067 longitude:127.0264644596139\n",
-      "schools=7      candidate latitude:37.52014036077475 longitude:127.02837145978481\n",
-      "schools=5      candidate latitude:37.52007150287898 longitude:127.03012301934733\n",
-      "schools=6      candidate latitude:37.519916511107205 longitude:127.0322755131162\n",
-      "schools=5      candidate latitude:37.52005166628916 longitude:127.0340325284346\n",
-      "schools=8      candidate latitude:37.518912216540436 longitude:127.02612919847938\n",
-      "schools=7      candidate latitude:37.51904337445246 longitude:127.0281988414412\n",
-      "schools=3      candidate latitude:37.519129203388765 longitude:127.03015936151354\n",
-      "schools=4      candidate latitude:37.51870214848081 longitude:127.0322013289426\n",
-      "schools=5      candidate latitude:37.518939913109726 longitude:127.03400725346431\n",
-      "schools=10      candidate latitude:37.517886439865514 longitude:127.0263715192932\n",
-      "schools=7      candidate latitude:37.51772005420875 longitude:127.02840681659357\n",
-      "schools=4      candidate latitude:37.51793311032513 longitude:127.03001565249738\n",
-      "schools=5      candidate latitude:37.51802456492766 longitude:127.03236153934627\n",
-      "schools=6      candidate latitude:37.51809757678338 longitude:127.03431329529116\n",
-      "schools=10      candidate latitude:37.51719236175003 longitude:127.02631642490377\n",
-      "schools=6      candidate latitude:37.516793246180576 longitude:127.02816719335509\n",
-      "schools=4      candidate latitude:37.51685456114997 longitude:127.03012778987446\n",
-      "schools=5      candidate latitude:37.51707676158805 longitude:127.0322327650124\n",
-      "schools=6      candidate latitude:37.51707673136788 longitude:127.03434869604834\n"
+      "schools=8      candidate latitude:37.5209952281683 longitude:127.02619579562439\n",
+      "schools=6      candidate latitude:37.52116405528831 longitude:127.02837317184218\n",
+      "schools=3      candidate latitude:37.52100012495459 longitude:127.03043281533131\n",
+      "schools=4      candidate latitude:37.52103060857341 longitude:127.0322884138989\n",
+      "schools=7      candidate latitude:37.520957354282274 longitude:127.03445174935595\n",
+      "schools=8      candidate latitude:37.51985050163391 longitude:127.02628941505938\n",
+      "schools=6      candidate latitude:37.519769917014436 longitude:127.02809060783707\n",
+      "schools=5      candidate latitude:37.51993491277166 longitude:127.03025011679968\n",
+      "schools=5      candidate latitude:37.51985552587978 longitude:127.03220391377761\n",
+      "schools=4      candidate latitude:37.51984232311199 longitude:127.03412850635034\n",
+      "schools=8      candidate latitude:37.51907559906177 longitude:127.02648152171781\n",
+      "schools=7      candidate latitude:37.518737385505254 longitude:127.0281725303226\n",
+      "schools=4      candidate latitude:37.51907602579742 longitude:127.03033206302449\n",
+      "schools=5      candidate latitude:37.51916810275527 longitude:127.0322967978252\n",
+      "schools=5      candidate latitude:37.519178193507216 longitude:127.03429159652934\n",
+      "schools=9      candidate latitude:37.51773631827634 longitude:127.02607467723239\n",
+      "schools=7      candidate latitude:37.517843308443034 longitude:127.02817118867108\n",
+      "schools=6      candidate latitude:37.51807269519922 longitude:127.03035682407594\n",
+      "schools=5      candidate latitude:37.51800120284214 longitude:127.03226526796716\n",
+      "schools=6      candidate latitude:37.518008910341635 longitude:127.0342546875256\n",
+      "schools=12      candidate latitude:37.51676335096894 longitude:127.0260185476052\n",
+      "schools=6      candidate latitude:37.51699737020656 longitude:127.02805675407693\n",
+      "schools=4      candidate latitude:37.51687349552193 longitude:127.03003832399098\n",
+      "schools=5      candidate latitude:37.516797613493345 longitude:127.03201372638239\n",
+      "schools=4      candidate latitude:37.51676722669216 longitude:127.0340507160179\n"
      ]
     }
    ],
@@ -286,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -295,14 +276,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max_value=10  best places:2\n",
-      "37.517886439865514   127.0263715192932\n",
-      "37.51719236175003   127.02631642490377\n"
+      "max_value=12  best places:1\n",
+      "37.51676335096894   127.0260185476052\n"
      ]
     }
    ],
    "source": [
-    "#final result\n",
+    "#final result!!!\n",
     "#find best places for kid restaurant\n",
     "print('max_value='+str(max_value)+'  best places:' +str( len(max_value_index))  )\n",
     "for i in range(0,len(max_value_index) ) :\n",
